--- a/src/css/style.css
+++ b/src/css/style.css
@@ -167,8 +167,8 @@ only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
 
 	/* logo */
-    .navbar-brand {
+    /*.navbar-brand {
     	background-image: url(../img/logo@2x.png) !important; background-repeat: no-repeat !important; background-size: 102px 32px !important;
-    }
+    }*/
 
 }
